--- a/cause.html
+++ b/cause.html
@@ -160,12 +160,12 @@
     <body>
         <section class="sub-header">
             <nav>
-                <a href="website.html"><img src="img/sparkhublogo.jpg"></a>
+                <a href="website.html"><img src="img/sparkhublogo-removebg-preview.png"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="register.html">REGISTER</a></li>
                         <li><a href="class.html">CLASS</a></li>
-                        <li><a href="coaches.html">COACHES</a></li>
+                        <li><a href="coaches2.html">COACHES</a></li>
                         <li><a href="cause.html">CAUSE</a></li>
                     </ul>
                 </div>
