--- a/class.html
+++ b/class.html
@@ -173,12 +173,12 @@
     <body>
         <section class="header">
             <nav>
-                <a href="website.html"><img src="img/sparkhublogo.jpg"></a>
+                <a href="website.html"><img src="img/sparkhublogo-removebg-preview.png"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="register.html">REGISTER</a></li>
                         <li><a href="class.html">CLASS</a></li>
-                        <li><a href="coaches.html">COACHES</a></li>
+                        <li><a href="coaches2.html">COACHES</a></li>
                         <li><a href="cause.html">CAUSE</a></li>
                     </ul>
                 </div>
@@ -189,7 +189,7 @@
         </div>
         </section>
         <section class="class-info">
-            <p>We are looking to expand our number of classes in the futue as we recruit more coaches. Currently we are doing 2 class every week during our 10 week sessions. The sessions typically start at the beginning of designated months and we will be announcing when through our mailing list.</p>
+            <p>We are looking to expand our number of classes in the future as we recruit more coaches. Currently we are doing 2 class every week during our 10 week sessions. The sessions typically start at the beginning of designated months and we will be announcing when through our mailing list.</p>
             <ul>
                 <li>Saturday 10:30-11:30 am</li>
                 <li>Sunday 10:30-11:30 am</li>
