--- a/class.html
+++ b/class.html
@@ -189,10 +189,10 @@
         </div>
         </section>
         <section class="class-info">
-            <p>We are looking to expand our number of classes in the future as we recruit more coaches. Currently we are doing 2 class every week during our 10 week sessions. The sessions typically start at the beginning of designated months and we will be announcing when through our mailing list.</p>
+            <p>We are looking to expand our program as we recruit more coaches. Currently we are doing ten week sessions with two available times twice a year. Enrollment is open for our fall session, which will start on September 23rd. You can sign up through our <a href="https://forms.gle/yRG55mktGV86fpcT9">signup form!</a> </p>
             <ul>
-                <li>Saturday 10:30-11:30 am</li>
-                <li>Sunday 10:30-11:30 am</li>
+                <li>Saturday 2:00PM - 3:00PM (beginner)</li>
+                <li>Sunday 2:00PM - 3:00PM (advanced)</li>
             </ul>
         </section>
         <section class="location">
