--- a/coaches2.html
+++ b/coaches2.html
@@ -193,7 +193,7 @@
         <div class="profile-row">
             <div class="coachprofile">
                     <img src="img/edwinprofile.jpg" width=30%>
-                    <p>I'm Edwin and I'm in 11th grade at Valley Christian High School. I first started playing basketball when I was 6 and have experience playing on my school's basketball team.</p>
+                    <p>I'm Edwin and I'm a senior at Valley Christian High School. I first played basketball when I was 6 years old. I played for school through middle school and early high school, and though I don't play for a team anymore, I hope to help others love the sport as well. I was also one of the founders of Sparkhub Foundation's basketball coaching program.</p>
             </div>
             
             <div class="coachprofile">
