--- a/cause.html
+++ b/cause.html
@@ -176,8 +176,8 @@
         </div>
         </section>
         <section class="cause">
-            <p>Through giving basketball coaching to elementary school students in the Bay Area, we hope to be able to spread joy and life lessons that come with playing
-                the sport of basketball. All funds that we make through this program is donated to charity.</p>
+            <p>Through providing basketball coaching to elementary school students in the Bay Area, we hope to be able to spread the joy and life lessons that come with playing
+                the sport of basketball. All funds that we make through this program are donated to charity.</p>
         </section> 
     </body>
 </html>
