--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
         </div>
         </section>
         <section class="about">
-            <p>Sparkhub is a non-profit organization that provides free coaching and tutoring to younger students. Through this opportunity the coaches, who are typically high school students, can also get more involved with the community. Learn more about Sparkhub Foundation at <a href="https://sparkhubfoundation.org/"> our website</a>.</p>
+            <p>Sparkhub is a non-profit organization that provides free coaching and tutoring to younger students. Through this opportunity the students can learn new things and the coaches, who are typically high school students, can get more involved with the community. Learn more about Sparkhub Foundation at <a href="https://sparkhubfoundation.org/"> our website</a>.</p>
         </section> 
     </body>
 </html>
